@@ -1,6 +1,15 @@
 2005-01-01  Jorn Baayen  <jbaayen@gnome.org>
 
 	* PluginLib/PlayerInterface.cs:
+	* src/PlaylistWindow.cs:
+
+	Add support for retreiving the contents of the playlist to
+	PlayerInterface. We should be able to have CD burning as a plugin
+	now ..
+
+2005-01-01  Jorn Baayen  <jbaayen@gnome.org>
+
+	* PluginLib/PlayerInterface.cs:
 	* PluginLib/Plugin.cs:
 	* src/PlaylistWindow.cs:
 
